samples/_failures_safe/1761328701_a3e580_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f326e8f.c: In function ‘print_compression_report’:
./samples/SAFE/__tmp_9f326e8f.c:140:16: error: missing terminating " character
  140 |         printf("  Block %u:
      |                ^~~~~~~~~~~~
./samples/SAFE/__tmp_9f326e8f.c:140:9: error: expected expression at end of input
  140 |         printf("  Block %u:
      |         ^~~~~~
./samples/SAFE/__tmp_9f326e8f.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9f326e8f.c:140:9: error: expected declaration or statement at end of input
